Add Admin TR logic & path
